--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prototype</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <script src="script3.js"></script>
+    <div class="box"></div>
+    <script src="script4.js"></script>
 </body>
 </html>
