--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <div class="box"></div>
     <script src="script4.js"></script>
+    <script src="script5.js"></script>
 </body>
 </html>
