--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prototype</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
-    <div class="box"></div>
-    <script src="script4.js"></script>
-    <script src="script5.js"></script>
+    <!-- <div class="box"></div>
+    <script src="script4.js"></script> -->
+    <script src="script6.js"></script>
 </body>
 </html>
